Add new three section, gallery, movie and icon section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="author" content="Paulina Brillowska">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <title>
             Paulina Brillowska - First page 
            </title>
@@ -55,7 +56,38 @@
              <h2>and finally <span class="yellow-text">NEVER GIVE UP</span></h2>
          </div>
      </section>
-
+    <article class="about-section">
+         <div class="container">
+             <h2>Lubię podejmować wyzwania, a Ty?</h2>
+             <img src="/image/o mnie.jpg" alt="about me">
+              <p></p>
+              <p></p>
+              <p></p>
+         </div>
+     </article>
+     <section class="gallery-section">
+         <div class="container">
+             <h2>Inspiracje desktop</h2>
+             <figure class="gallery-image">
+                 <img src="https://images.unsplash.com/photo-1492724441997-5dc865305da7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3ecc13b203d60ff0fa05b07805b0f2ca&auto=format&fit=crop&w=500&q=60" alt="minimalist desktop">
+                 <img src="https://images.unsplash.com/photo-1494173853739-c21f58b16055?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f9023686d61271902f4dca0cda6b1cb1&auto=format&fit=crop&w=401&q=80" alt="apple desktop">
+                 <img src="https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=488378cf5697574c717752de2b84518e&auto=format&fit=crop&w=753&q=80" alt="programmer desktop">
+                 <img src="https://images.unsplash.com/photo-1517162024945-595ae6bca1a4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e4c3a2568e4ec0bb1c934e06da66ddd4&auto=format&fit=crop&w=750&q=80" alt="workspace">
+                </figure>
+         </div>
+     </section>
+     <section class="movie-section">
+         <div class="single-movie">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HluANRwPyNo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+         </div>
+     </section>
+     <section class="icon-section">
+         <div class="icon fb-fans">
+             <a href="https://facebook.com/nightwriterka" target="_blank"><i class="fab fa-facebook-square"></i></a>
+             <p>3,3K</p>
+             <p><span>Fans</span></p>
+         </div>
+     </section>
      <a href="https://www.nightwriterka.com">Moja strona freelancera</a>
     </body>
 </html>
