Add footer and <main> after header

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </nav>
         
         </header>
+        <main>
      <section class="hero-section">
          <div class="slogan">
              <h2>Make <span>Dreams</span> come <span>True</span></h2>
@@ -83,11 +84,20 @@
      </section>
      <section class="icon-section">
          <div class="icon fb-fans">
-             <a href="https://facebook.com/nightwriterka" target="_blank"><i class="fab fa-facebook-square"></i></a>
+             <a href="https://facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
              <p>3,3K</p>
              <p><span>Fans</span></p>
          </div>
+         <div class="icon insta-fans">
+                <a href="https://instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <p>6,5K</p>
+                <p><span>Followers</span></p>
+            </div>
      </section>
-     <a href="https://www.nightwriterka.com">Moja strona freelancera</a>
+    </main>
+     <footer>
+         <p>&#169 Strona stworzona przez <a href="https://www.nightwriterka.com" target="_blank">Nightwriterka Paulina Brillowska</a></p>
+     </footer>
+     
     </body>
 </html>
