Add paragraphs, not snatdard lorem ipsum, add a hacker ipsum

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <nav class="menu-section">
-                <h1 class="nav-logo">Challenge Programistka</h1>
+                    <h1 class="nav-logo">Challenge Programistka</h1>
                <ul>
                    <li>
                        <a href="#">Strona główna</a>
@@ -48,6 +48,7 @@
                     </li>
                </ul> 
             </nav>
+            <div class="clear"></div>
         
         </header>
         <main>
@@ -59,11 +60,12 @@
      </section>
     <article class="about-section">
          <div class="container">
-             <h2>Lubię podejmować wyzwania, a Ty?</h2>
-             <img src="/image/o mnie.jpg" alt="about me">
-              <p></p>
-              <p></p>
-              <p></p>
+             <h2>Hacker Ipsum</h2>
+             <img src="https://images.unsplash.com/photo-1489389944381-3471b5b30f04?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4868cc90c3c515fb1316574d9aff1640&auto=format&fit=crop&w=750&q=80" alt="about me">
+              <h3>Hack the Pentagon?</h3>
+              <p>Haxx0r ipsum stack trace daemon boolean fail pragma hash I'm compiling win nak leet ban worm fork gurfle cat recursively printf. Linux interpreter script kiddies void gc ack ssh port. It's a feature back door mutex python bang endif protocol bytes double regex buffer man pages concurrently do foad syn todo float alloc. Grep for socket echo fopen lib warez frack ascii packet rm -rf segfault *.* if tcp mega new case wannabee ip tera grep stdio.h emacs giga d00dz protected. Dennis Ritchie Leslie Lamport server James T. Kirk client false less big-endian. Malloc bin int mountain dew overflow then kilo rsa hack the mainframe flood Linus Torvalds.</p>
+              <p>Ascii snarf public loop machine code xss brute force root fail null frack Trojan horse ctl-c hexadecimal perl piggyback cat baz. Server wabbit fatal port rm -rf Donald Knuth interpreter mountain dew bar ddos daemon. Exception function James T. Kirk vi wannabee thread tarball chown for less Starcraft injection man pages cd emacs. I'm sorry Dave, I'm afraid I can't do that mailbomb eof deadlock endif ascii spoof kilo leapfrog hack the mainframe. Nak unix infinite loop terminal lib salt protocol python false Leslie Lamport int boolean segfault flood sql. Then malloc if dereference bang cookie echo big-endian stack todo stack trace.</p>
+              <p>New cd blob suitably small values big-endian script kiddies for Linus Torvalds Trojan horse headers fopen. Socket class if private irc bin continue malloc false sudo packet interpreter bytes. Linux var buffer gcc infinite loop rm -rf leet man pages firewall wabbit. Double it's a feature Leslie Lamport data packet sniffer ack thread. Boolean server gnu hexadecimal back door new I'm sorry Dave, I'm afraid I can't do that. Syn ip giga alloc bubble sort float baz cookie mega I'm compiling printf over clock flood concurrently eaten by a grue nak lib segfault mainframe gurfle.</p>
          </div>
      </article>
      <section class="gallery-section">
@@ -78,6 +80,7 @@
          </div>
      </section>
      <section class="movie-section">
+         <h2>Movie about: What people think programming is vs. how it actually is. </h2>
          <div class="single-movie">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/HluANRwPyNo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
          </div>
